見出しの調整

--- a/profile.html
+++ b/profile.html
@@ -19,7 +19,7 @@
 <body>
   <header class="header">
     <div class="header__wrapper inner">
-      <h1 class="logo en-title">
+      <h1 class="logo en-text">
         <a href="index.html" class="logo__link">Yuta Kobayashi's<br>Portfolio</a>
       </h1>
 
@@ -57,7 +57,7 @@
   </header>
 
   <main>
-    <h2 class="heading-common page-heading en-title"><span class="first-letter--change">p</span>rofile</h2>
+    <h2 class="heading-common page-heading en-text"><span class="first-letter--change">p</span>rofile</h2>
 
     <div class="breadcrumbs">
       <div class="breadcrumb_inner inner">
@@ -71,9 +71,9 @@
     <section class="prof-sec prof-sec-first about-me bg-gradient">
       <div class="inner">
         <div class="profile-wrapper">
-          <h3 class="prof-heading posi-right en-title heading-common">about me</h3>
+          <h3 class="prof-heading posi-right en-text heading-common">about me</h3>
 
-          <p class="about-body__title en-title">Kobayashi Yuta</p>
+          <p class="about-body__title en-text">Kobayashi Yuta</p>
 
           <ul class="about-body__content-list">
             <li class="about-body__content">1985年生まれ愛知県名古屋市出身。<br>中学、高校では運動部、大学時代はアカペラサークルに所属しておりました。</li>
@@ -97,7 +97,7 @@
     <section class="prof-sec career">
       <div class="inner">
         <div class="profile-wrapper">
-          <h3 class="prof-heading posi-left en-title heading-common">career</h3>
+          <h3 class="prof-heading posi-left en-text heading-common">career</h3>
 
           <ul class="career__lists">
             <li class="career__list">
@@ -136,7 +136,7 @@
       <div class="inner">
         <div class="profile-wrapper">
 
-          <h3 class="prof-heading posi-right en-title heading-common">skills</h3>
+          <h3 class="prof-heading posi-right en-text heading-common">skills</h3>
   
           <div class="skills-wrapper">
             <ul class="skills-list">
@@ -191,7 +191,7 @@
       <div class="inner">
         <div class="profile-wrapper-wcid">
 
-          <h3 class="prof-heading  en-title heading-common wicd-title">what i can do</h3>
+          <h3 class="prof-heading  en-text heading-common wicd-title">what i can do</h3>
 
           <div class="wicd__wrapper">
             <ul class="wicd__lists">
