--- a/single-temp.html
+++ b/single-temp.html
@@ -19,7 +19,7 @@
 <body>
   <header class="header">
     <div class="header__wrapper inner">
-      <h1 class="logo en-title">
+      <h1 class="logo en-text">
         <a href="index.html" class="logo__link">Yuta Kobayashi's<br>Portfolio</a>
       </h1>
 
@@ -57,7 +57,7 @@
   </header>
 
   <main>
-    <h2 class="heading-common page-heading en-title"><span class="first-letter--change">Y</span>イトルが入るタイトルが入る</h2>
+    <h2 class="heading-common page-heading en-text"><span class="first-letter--change">Y</span>イトルが入るタイトルが入る</h2>
 
     <div class="breadcrumbs">
       <div class="breadcrumb_inner inner">
@@ -114,58 +114,68 @@
         </div>
         <!-- /single-top -->
 
-        <div class="single-detail single__wrapper">
-          <h3 class="sec-sub-heading">サイトの詳細</h3>
+        <div class="single-detail single__wrapper over--inner">
+          <div class="inner">
 
-          <ul class="single-content">
-            <li class="single-content__list">
-              <p class="single-content__title">サイト制作の概要</p>
-
-              <ul class="single-content__text-wrapper"> 
-                <li class="single-content__text">既卒者、転職者向けの人材派遣会社のWebサイト</li>
-              </ul>
-            </li>
-            <!-- /single-content__list -->
-
-            <li class="single-content__list">
-              <p class="single-content__title">ターゲットの基本情報</p>
-
-              <ul class="single-content__text-wrapper"> 
-                <li class="single-content__text">・20代から30代を軸とした既卒者、転職者</li>
-                <li class="single-content__text">・20代から30代を軸とした既卒者、転職者</li>
-                <li class="single-content__text">・20代から30代を軸とした既卒者、転職者</li>
-              </ul>
-            </li>
-            <!-- /single-content__list -->
-
-            <li class="single-content__list">
-              <p class="single-content__title">ゴール</p>
-
-              <ul class="single-content__text-wrapper"> 
-                <li class="single-content__text">Webサイトを通じて登録者を増やす</li>
-              </ul>
-            </li>
-            <!-- /single-content__list -->
-
-            <li class="single-content__list">
-              <p class="single-content__title">ゴールまでのポイント</p>
-
-              <ul class="single-content__text-wrapper"> 
-                <li class="single-content__text">・Webサイトを通じて登録者を増やす</li>
-                <li class="single-content__text">・製作実績をTopページに配置することでどのようなことができるかアピールする</li>
-                <li class="single-content__text">・20代から30代を軸とした既卒者、転職者</li>
-              </ul>
-            </li>
-            <!-- /single-content__list -->
-
-          </ul>
-          <!-- /single-content -->
-          
+            <div class="sub-heading__wrapper">
+              <h3 class="sub-heading  --ja">サイトの詳細</h3>
+              <p class="heading-common en-text sub-heading-en">details</p>
+            </div>
+  
+            <ul class="single-content">
+              <li class="single-content__list">
+                <p class="single-content__title">サイト制作の概要</p>
+  
+                <ul class="single-content__text-wrapper"> 
+                  <li class="single-content__text">既卒者、転職者向けの人材派遣会社のWebサイト</li>
+                </ul>
+              </li>
+              <!-- /single-content__list -->
+  
+              <li class="single-content__list">
+                <p class="single-content__title">ターゲットの基本情報</p>
+  
+                <ul class="single-content__text-wrapper"> 
+                  <li class="single-content__text">・20代から30代を軸とした既卒者、転職者</li>
+                  <li class="single-content__text">・20代から30代を軸とした既卒者、転職者</li>
+                  <li class="single-content__text">・20代から30代を軸とした既卒者、転職者</li>
+                </ul>
+              </li>
+              <!-- /single-content__list -->
+  
+              <li class="single-content__list">
+                <p class="single-content__title">ゴール</p>
+  
+                <ul class="single-content__text-wrapper"> 
+                  <li class="single-content__text">Webサイトを通じて登録者を増やす</li>
+                </ul>
+              </li>
+              <!-- /single-content__list -->
+  
+              <li class="single-content__list">
+                <p class="single-content__title">ゴールまでのポイント</p>
+  
+                <ul class="single-content__text-wrapper"> 
+                  <li class="single-content__text">・Webサイトを通じて登録者を増やす</li>
+                  <li class="single-content__text">・製作実績をTopページに配置することでどのようなことができるかアピールする</li>
+                  <li class="single-content__text">・20代から30代を軸とした既卒者、転職者</li>
+                </ul>
+              </li>
+              <!-- /single-content__list -->
+  
+            </ul>
+            <!-- /single-content -->
+            
+          </div>
+          <!-- /inner -->
         </div>
         <!-- /single__detail -->
 
         <div class="single-point single__wrapper">
-          <h3 class="sec-sub-heading">サイト制作のポイント</h3>
+          <div class="sub-heading__wrapper">
+            <h3 class="sub-heading --ja">制作のポイント</h3>
+            <p class="heading-common en-text sub-heading-en">points</p>
+          </div>
 
           <div class="single-point__wrapper">
             <div class="single-point__image">
