--- a/archive-banners.html
+++ b/archive-banners.html
@@ -20,7 +20,7 @@
 <body>
   <header class="header">
     <div class="header__wrapper inner">
-      <h1 class="logo en-title">
+      <h1 class="logo en-text">
         <a href="index.html" class="logo__link">Yuta Kobayashi's<br>Portfolio</a>
       </h1>
 
@@ -58,7 +58,7 @@
   </header>
 
   <main>
-    <h2 class="heading-common page-heading en-title"><span class="first-letter--change">b</span>anners</h2>
+    <h2 class="heading-common page-heading en-text"><span class="first-letter--change">b</span>anners</h2>
 
     <div class="breadcrumbs">
       <div class="breadcrumb_inner inner">
