--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
   <header class="header">
     <div class="header__wrapper inner">
-      <h1 class="logo en-title">
+      <h1 class="logo en-text">
         <a href="index.html" class="logo__link">Yuta Kobayashi's<br>Portfolio</a>
       </h1>
 
@@ -65,7 +65,7 @@
   <main>
     <div class="mv"  id="slider">
       <div class="inner flex">
-        <h1 class="site-title en-title"><span class="first-letter--change">Y</span>uta<br><span class="first-letter--change">K</span>obayashi's<br><span class="first-letter--change">P</span>ortfolio</h1>
+        <h1 class="site-title en-text"><span class="first-letter--change">Y</span>uta<br><span class="first-letter--change">K</span>obayashi's<br><span class="first-letter--change">P</span>ortfolio</h1>
       </div>
       <!-- /inner -->
       <div class="scrolldown"><span>Scroll</span></div>
@@ -74,9 +74,9 @@
 
     <section class="works-top section">
       <div class="inner">
-        <h2 class="heading-common sec-heading en-title sec-heading__works over--inner"><p class="sec-heading--ja">制作物</p>works</h2>
+        <h2 class="heading-common sec-heading en-text sec-heading__works over--inner"><p class="sec-heading--ja">制作物</p>works</h2>
 
-        <h3 class="sec-sub-heading --daikei">架空案件</h3>
+        <h3 class="sub-heading --top --daikei">架空案件</h3>
 
         <div class="works-top__wrapper over--inner">
           <p class="works-top__explain">架空の案件を想定して作成したサイトです。</p>
@@ -147,7 +147,11 @@
       <!-- /inner -->
       
       <div class="practice__wrapper">
-        <h3 class="sec-sub-heading">その他の制作物</h3>
+        <div class="sub-heading__wrapper">
+          <h3 class="sub-heading  --ja">その他の制作物</h3>
+          <p class="heading-common en-text sub-heading-en">others</p>
+        </div>
+        <!-- <h3 class="sec-sub-heading"></h3> -->
 
         <div class="practice__list-wrapper">
           
@@ -221,7 +225,7 @@
 
     <section class="about section">
       <div class="inner">
-        <h2 class="heading-common sec-heading en-title --right  over--inner"><p class="sec-heading--ja">私について</p>about</h2>
+        <h2 class="heading-common sec-heading en-text --right  over--inner"><p class="sec-heading--ja">私について</p>about</h2>
 
         <div class="about__wrapper padding-container">
           <div class="about-image__wrapper">
@@ -236,7 +240,7 @@
           <!-- /about-image__wrapper -->
   
           <div class="about-body__wrapper">
-            <p class="about-body__title en-title">Yuta Kobayashi</p>
+            <p class="about-body__title en-text">Yuta Kobayashi</p>
 
             <ul class="about-body__content-list">
               <li class="about-body__content">大学を卒業後、実家の家業である飲食店で勤務。
@@ -259,7 +263,7 @@
     <section class="contact-top section">
       <div class="inner">
   
-        <h2 class="heading-common sec-heading en-title --left over--inner"><p class="sec-heading--ja">お問い合わせ</p>contact</h2>
+        <h2 class="heading-common sec-heading en-text --left over--inner"><p class="sec-heading--ja">お問い合わせ</p>contact</h2>
 
         <div class="padding-container">
           <p>お忙しい中ご覧いただきありがとうございます。<br>お仕事の話はもちろん、サイトの感想など何でもお聞かせください。</p>
