--- a/profile.html
+++ b/profile.html
@@ -80,7 +80,7 @@
   
             <li class="about-body__content">母の体調が悪くなってきたのを機に閉店</li>
   
-            <li class="about-body__content">その後書店にて販売接客を中心に４年間勤務</li>
+            <li class="about-body__content">その後、小さい頃から本が好きでご縁のあったアルバイト先の書店で正社員となり販売接客を中心に計４年間勤務</li>
   
             <li class="about-body__content">店内のレイアウト用にデザインを学んでいたところ、Webデザインに興味を持ち学習を始める。</li>
 
@@ -119,7 +119,7 @@
   
             <li class="career__list">
               <time class="career__timeline">2018.09</time>
-              <div class="career__content">同市内にある他書店に就職。接客販売やシフト管理、アルバイトの育成を中心に三店舗に渡り店舗運営などを経験。その中の業務の１つであった店内POPのデザインを学ぶうちにWebデザインに興味を持ち、書籍や動画による独学を初める。</div>
+              <div class="career__content">勤務先が閉店のため、同市内にある他書店に就職。接客販売やシフト管理、アルバイトの育成を中心に三店舗に渡り店舗運営などを経験。その中の業務の１つであった店内POPのデザインを学ぶうちにWebデザインに興味を持ち、書籍や動画による独学を初める。</div>
             </li>
   
             <li class="career__list">
