--- a/index.html
+++ b/index.html
@@ -63,12 +63,18 @@
   </header>
 
   <main>
-    <div class="mv"  id="slider">
-      <div class="inner flex">
-        <h1 class="site-title en-text"><span class="first-letter--change">Y</span>uta<br><span class="first-letter--change">K</span>obayashi's<br><span class="first-letter--change">P</span>ortfolio</h1>
+    <div class="mv">
+      <div class="inner">
+        <div class="mv__bg-area"  id="">
+          <h1 class="site-title en-text"><span class="first-letter--change">Y</span>uta<br><span class="first-letter--change">K</span>obayashi's<br><span class="first-letter--change">P</span>ortfolio</h1>
+        </div>
+        <!-- /bg-area -->
       </div>
       <!-- /inner -->
-      <div class="scrolldown"><span>Scroll</span></div>
+
+      <!-- <div class="scrolldown"><span>Scroll</span></div> -->
+      <div class="mv__bar --cross"></div>
+      <div class="mv__bar --vertical"></div>
     </div>
     <!-- /mv -->
 
