--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 </head>
 
 <body>
+  <!-- <div class="q"></div> -->
   <header class="header">
     <div class="header__wrapper inner">
       <h1 class="logo en-text">
@@ -30,8 +31,6 @@
         <div class="bar"></div>
         <div class="bar"></div>
       </div>
-
-
 
       <!-- sp用ナビメニュー -->
       <nav class="gnav gnav--sp">
