--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css">
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css">
-
-<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/vegas/2.4.4/vegas.min.css">
+  
+<!-- <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/vegas/2.4.4/vegas.min.css"> -->
   <link rel="stylesheet" href="css/styles.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,7 +19,6 @@
 </head>
 
 <body>
-  <!-- <div class="q"></div> -->
   <header class="header">
     <div class="header__wrapper inner">
       <h1 class="logo en-text">
@@ -62,7 +61,18 @@
   </header>
 
   <main>
-    <div class="mv" id="slider">
+    <div class="mv">
+      <div class="mvSwiper">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide"><img src="images/clinic-top.png" alt=""></div>
+          <div class="swiper-slide"><img src="images/huvest-top-image.png" alt=""></div>
+          <div class="swiper-slide"><img src="images/blog-image.png" alt=""></div>
+          <div class="swiper-slide"><img src="images/k-create-top-image.png" alt=""></div>
+        </div>
+        <!-- /swiper-wrapper -->
+      </div>
+      <!-- /mvSwiper -->
+
       <div class="film"></div>
 
       <div class="inner">
@@ -155,7 +165,6 @@
           <h3 class="sub-heading  --ja">その他の制作物</h3>
           <p class="heading-common en-text sub-heading-en">others</p>
         </div>
-        <!-- <h3 class="sec-sub-heading"></h3> -->
 
         <div class="practice__list-wrapper">
           
@@ -296,7 +305,7 @@
   <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
   <script src="js/swiper.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/vegas/2.4.4/vegas.min.js"></script>
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/vegas/2.4.4/vegas.min.js"></script> -->
   <script src="js/main.js"></script>
 </body>
 
