--- a/single-temp.html
+++ b/single-temp.html
@@ -108,7 +108,7 @@
           </ul>
           <!-- /single-content -->
   
-          <a href="" class="btn btn--pageChange mt-70">サイトへ</a>
+          <a href="" target="_blank" class="btn btn--pageChange mt-70">サイトへ<i class="fa-solid fa-up-right-from-square"></i></a>
   
           <p  class="single-top__attention">※BASIC認証をかけてあります。<br>お手数ですがid”portfolio”, パスワード”kcreate”を入力してご覧ください</p>
         </div>
@@ -136,9 +136,9 @@
                 <p class="single-content__title">ターゲットの基本情報</p>
   
                 <ul class="single-content__text-wrapper"> 
-                  <li class="single-content__text">・20代から30代を軸とした既卒者、転職者</li>
-                  <li class="single-content__text">・20代から30代を軸とした既卒者、転職者</li>
-                  <li class="single-content__text">・20代から30代を軸とした既卒者、転職者</li>
+                  <li class="single-content__text --list">20代から30代を軸とした既卒者、転職者</li>
+                  <li class="single-content__text --list">20代から30代を軸とした既卒者、転職者</li>
+                  <li class="single-content__text --list">20代から30代を軸とした既卒者、転職者</li>
                 </ul>
               </li>
               <!-- /single-content__list -->
@@ -156,15 +156,39 @@
                 <p class="single-content__title">ゴールまでのポイント</p>
   
                 <ul class="single-content__text-wrapper"> 
-                  <li class="single-content__text">・Webサイトを通じて登録者を増やす</li>
-                  <li class="single-content__text">・製作実績をTopページに配置することでどのようなことができるかアピールする</li>
-                  <li class="single-content__text">・20代から30代を軸とした既卒者、転職者</li>
+                  <li class="single-content__text --list">Webサイトを通じて登録者を増やす</li>
+                  <li class="single-content__text --list">製作実績をTopページに配置することでどのようなことができるかアピールする</li>
+                  <li class="single-content__text --list">20代から30代を軸とした既卒者、転職者</li>
                 </ul>
               </li>
               <!-- /single-content__list -->
   
             </ul>
             <!-- /single-content -->
+
+            <div class="single__site-image-wrapper">
+  
+              <div class="pc-image-wrapper">
+                <div class="toggle-btn" id="pcToggle"><i class="fas fa-desktop"></i>パソコンでのイメージ</div>
+                <p class="click-open">※クリックで開閉できます</p>
+                <div class="pc-image">
+                  <img src="images/k-create-screen .png" alt="">
+                </div>
+              </div>
+              <!-- /pc-image-wrapper -->
+    
+              <div class="sp-image-wrapper">
+                <div class="toggle-btn" id="spToggle"><i class="fas fa-mobile-alt"></i>スマホでのイメージ</div>
+                <p class="click-open">※クリックで開閉できます</p>
+  
+                <div class="sp-image">
+                  <img src="images/k-create_sp-screen .png" alt="">
+                </div>
+              </div>
+              <!-- /sp-image-wrapper -->
+  
+            </div>
+            <!-- /single__site-image-wrapper -->
             
           </div>
           <!-- /inner -->
