--- a/single-temp.html
+++ b/single-temp.html
@@ -249,6 +249,21 @@
         </div>
         <!-- /single-point -->
 
+        <div class="pagination-btn-wrapper" id="paginationFade">
+          <div class="pagination-btn left">
+            <a href="">
+              <img src="images/svg/arrow-left.svg" alt="前の記事へ">
+            </a>
+          </div>
+
+          <div class="pagination-btn right">
+            <a href="">
+              <img src="images/svg/arrow-right.svg" alt="次の記事へ">
+            </a>
+          </div>
+        </div>
+        <!-- /pagination-btn-wrapper -->
+
         <ul class="pagination">
           <li class="prev"><a href="" class="">PREV</a></li>
           <li class="to-works"><a href="" class="">WORKS</a></li>
