--- a/archive-practice.html
+++ b/archive-practice.html
@@ -75,7 +75,7 @@
 
         <ul class="works__item-list banners__list">
 
-          <li class="works__item item--responsive">
+          <li class="works__item cording__item item--responsive">
             <h3 class="works__item-title">タイトル</h3>
             <a href="single.html" class="works__item--link">
               <figure class="thum works--thum">
