aboutの文章の修正

--- a/single-temp.html
+++ b/single-temp.html
@@ -75,7 +75,7 @@
           <div class="single-top__thum thum">
             <img src="images/k-create-top-image.png" alt=""  loading="lazy">
           </div>
-          <p class="single-top__explain">猫を飼い始めることになったら、まず何が必要なのでしょうか？ 必ず必要になるグッズと、あると便利な猫グッズを紹介します。 猫はこれからの10数年、ともに生きていく家族の一員です。</p>
+          <div class="single-top__explain">猫を飼い始めることになったら、まず何が必要なのでしょうか？ 必ず必要になるグッズと、あると便利な猫グッズを紹介します。 猫はこれからの10数年、ともに生きていく家族の一員です。</div>
 
           <ul class="single-content">
             <li class="single-content__list">
