--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
           <div class="swiper-area">
   
-            <div class="swiper">
+            <div class="worksSwiper swiper">
               <div class="swiper-wrapper works-top__item-wrapper">
                 <div class="swiper-slide works-top__item-list">
                   <ul class="works-top__item">
