--- a/single-temp.html
+++ b/single-temp.html
@@ -195,7 +195,7 @@
         </div>
         <!-- /single__detail -->
 
-        <div class="single-point single__wrapper">
+        <div id="single-point" class="single-point single__wrapper">
           <div class="sub-heading__wrapper">
             <h3 class="sub-heading --ja">制作のポイント</h3>
             <p class="heading-common en-text sub-heading-en">points</p>
